...
    <string name="text_welcome_onboard">"Welcome on board!"</string>
    <string name="onboard_text_msg_part_1">"We’re thrilled that you joined "</string>
    <string name="onboard_text_msg_part_2">". You’re on your way to earning points and receiving exclusive rewards.\n"</string>
    <string name="onboard_text_msg_part_3">Log in with your username and password.</string>
    <string name="join_text_already_signed_in">We’re thrilled that you want to join us. Click Join and earn points and receive exclusive rewards.</string>

    <string name="screen_title_home">"Home"</string>
    <string name="screen_title_my_offers">"My Promotions"</string>
    <string name="screen_title_my_profiles">"My Profile"</string>
    <string name="text_my_promotions">"My Promotions"</string>
    <string name="text_promotions">"Promotions"</string>
    <string name="screen_title_redeem">"Redeem"</string>
    <string name="screen_title_more">"More"</string>
    <string name="my_transactions">"My Transactions"</string>
...
    <string name="button_try_again">Try Again</string>
    <string name="scanning_congrats">Your receipt is uploaded!</string>
    <string name="scanning_congrats_background">Congratulations Screen Background</string>
    <string name="scanning_congrats_gift_icon">Congrats Gift Icon</string>
    <string name="scanning_congrats_subtitle">We’ve credited %s points for the uploaded receipt.</string>
    <string name="scanning_receipt_subtitle_no_points">Calculating loyalty points for the eligible items can take a while. Check back later.</string>
    <string name="scanning_done">Done</string>
    <string name="scan_another_receipt">Upload Another Receipt</string>
    <string name="scan_progress_indicator">Generating preview…</string>
    <string name="scan_progress_subheader">Hang in there! This may take a minute.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="request_permission">Request permission</string>
    <string name="permission_message">The camera is important for this app. Please grant the permission.</string>
...
    <string name="purchase_status_signed_up">Signed Up</string>
    <string name="my_referral_card_header"><![CDATA[Your Referrals in Last <b>%s</b> Days]]></string>
    <string name="my_referral_sent_label">Invitations Sent</string>
    <string name="my_referrals_accepted_label">Invitations Accepted</string>
    <string name="my_referrals_vouchers_earned_label">Vouchers Earned</string>
    <string name="refer_friend_banner_content_description">Refer Friend Banner</string>
    <string name="refer_a_friend_and_earn_header">Start Referring</string>
    <string name="refer_a_friend_and_earn_sub_header">Your referral code is ready! Share the referral code with your friends and get rewarded when they place their first order.</string>
    <string name="separate_emails_with_commas">Add a comma after each email address.</string>
    <string name="share_via">Share Invite</string>
    <string name="share_via_facebook_icon_description">Share via Facebook</string>
    <string name="share_via_instagram_icon_description">Share via Instagram</string>
    <string name="share_via_whatsapp_icon_description">Share via Whatsapp</string>
    <string name="share_via_twitter_icon_description">Share via Twitter</string>
    <string name="share_via_icon_description">Share via</string>
    <string name="friends_email_address_placeholder">Enter the email addresses of your friends…</string>
    <string name="forward_arrow_content_description">Forward Arrow</string>
    <string name="tap_to_copy">Copy</string>
    <string name="share_referral_message">Use my referral link to sign up: %1$s</string>
    <string name="emails_warning_message_multiple">Please enter valid E-mails!</string>
    <string name="share_referral_code_intent_chooser">Share Referral Code</string>
    <string name="selected_app_is_not_installed">Selected app is not installed!</string>

    <string name="referral_signup_button_text">Sign Up</string>
...
    <string name="failed_try_again">We couldn’t send an invitation email to your referred friends. Try again.</string>
    <string name="emails_sent_successfully">An invitation email was sent to your friends with your referral link.</string>
    <string name="enrolment_not_processed_message">We couldn’t enroll you as a member of the referral program. Try joining again.</string>
    <string name="no_referrals_label">After you refer a friend, you’ll see it here.</string>
    <string name="invalid_email_error_message">Something doesn\'t look right with one of the email addresses.</string>
    <string name="join_referral_program_button_text">Join Referral Program</string>
    <string name="referral_back_button_text">Back</string>
    <string name="referral_promotion_expired_error_message">You missed the boat\n\nYou can no longer refer your friends because the referral promotion has expired.</string>
    <string name="referral_feature_not_enabled_error_message">The referral promotion isn’t available.</string>
    <!-- My Referrals Strings End -->

    <string name="text_go_to_voucher_section">Go to Vouchers</string>
    <string name="text_better_luck_reward">Thank you for playing! Stay tuned for more offers.</string>
...
