...
        const val TEST_TAG_PAYMENT_UI_CONTAINER = "payment_ui_container"
        const val TEST_TAG_CONFIRM_ORDER_BUTTON = "confirm_order_button"
        const val TEST_TAG_APP_LOGO_HOME_SCREEN = "AppLogoHomeScreen"
        const val TEST_TAG_HOME_SCREEN_CONTAINER = "HomeScreenElementContainer"
        const val TEST_TAG_PROMOTION_CARD = "PromotionCard"
        const val TEST_TAG_VOUCHER_ROW = "VoucherRowView"
        const val TEST_TAG_PROMO_CARD = "promotioncard"
        const val TEST_TAG_BENEFITS = "benefits"
        const val TEST_TAG_QR_CODE = "QR Code"
        const val TEST_TAG_CLICK = " click"
        const val TEST_TAG_TRANSACTION_LIST = "transaction_list"
        const val TEST_TAG_RECENT_TRANSACTION = "recent_transaction"
        const val TEST_TAG_OLD_TRANSACTION = "old_transaction"
        const val TEST_TAG_HOME_SCREEN = "HomeScreen"
        const val TEST_TAG_PROMO_LIST = "promotion_list"
        const val TEST_TAG_PROMO_ITEM = "promo_item"
        const val TEST_TAG_PROMO_POPUP = "promotion_popup"
        const val TEST_TAG_CLOSE_POPUP_PROMOTION = "close_button"
        const val TEST_TAG_PROMO_NAME = "promo_name"
        const val TEST_TAG_PROMO_IMAGE = "promo_image"
        const val TEST_TAG_DETAIL_HEADING = "detail_heading"
        const val TEST_TAG_PROMO_DESCRIPTION = "promo_description"
        const val TEST_TAG_EXPIRATION_DATE = "expiration_date"
        const val TEST_TAG_EMAIL_PHONE = "EmailID_PhoneNumber"
...
