...
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.window.Dialog
import androidx.compose.ui.window.DialogProperties
import com.salesforce.loyalty.mobile.myntorewards.ui.theme.VibrantPurple40

const val CIRCULAR_PROGRESS_TEST_TAG = "CIRCULAR_PROGRESS_TEST_TAG"

@Composable
fun CircularProgress(modifier: Modifier = Modifier.fillMaxSize(), color: Color = VibrantPurple40) {
    Box(modifier = modifier) {
        CircularProgressIndicator(
            color = color,
...
