...
import com.salesforce.loyalty.mobile.MyNTORewards.R
import com.salesforce.loyalty.mobile.myntorewards.ui.theme.TextGray
import com.salesforce.loyalty.mobile.myntorewards.ui.theme.VeryLightPurple
import com.salesforce.loyalty.mobile.myntorewards.ui.theme.VibrantPurple65
import com.salesforce.loyalty.mobile.myntorewards.ui.theme.font_sf_pro

const val TEST_TAG_TEXT_FIELD_RIGHT_ICON = "TEST_TAG_TEXT_FIELD_RIGHT_ICON"

@Composable
fun TextFieldCustom(
    textFieldValue: TextFieldValue,
    placeholderText: String,
    keyboardType: KeyboardType = KeyboardType.Email,
...
